2009-12-15  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from trunk:
	2009-12-07  H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/11037
	* expr.c (resolve_expression): Call symbol_same_p to check
	if 2 symbols are the same.

	* symbols.c (symbol_same_p): New.
	* symbols.h (symbol_same_p): Likewise.

2009-12-03  Nick Clifton  <nickc@redhat.com>

	PR gas/11011
	Import this patch from the mainline:
	2009-10-18  Alan Modra  <amodra@bigpond.net.au>

	* as.h (know): Don't define as empty.

2009-10-28  Alan Modra  <amodra@bigpond.net.au>

	PR gas/10856
	* expr.c (resolve_expression): Only add "left" value to O_symbol
	expression when the symbol is undefined and different from the
	original symbol.  Simplify negative logic.

2009-10-18  Matthias Klose  <doko@ubuntu.com>

	* config/tc-arm.c (make_mapping_symbol): Add braces to avoid empty body
	in release builds.

2009-10-13  Alan Modra  <amodra@bigpond.net.au>
	    H.J. Lu  <hongjiu.lu@intel.com>

	PR gas/2117
	* config/tc-ia64.c (parse_operand): Use expression rather than
	expression_and_evalute.
	(parse_operand_and_eval): New function.  Replace all uses of
	parse_operand outside of parse_operands with this function.
	(parse_operans_maybe_eval): New function.  Replace uses of
	parse_operand in parse_operands, except for the dummy, with
	this function.

2009-10-06  Alan Modra  <amodra@bigpond.net.au>

	PR gas/10704
	* symbols.c (snapshot_symbol): Revert 2006-01-09 patch for PR2117.

2009-10-06  Alan Modra  <amodra@bigpond.net.au>

	* read.c (s_reloc): Don't use expression_and_evaluate.

2009-10-06  Jakub Jelinek  <jakub@redhat.com>

	* dw2gencfi.c: Include dwarf2dbg.h.
	(DWARF2_FORMAT): Define if not defined.
	(dot_cfi_sections): New function.
	(cfi_pseudo_table): Handle .cfi_sections.
	(CFI_EMIT_eh_frame, CFI_EMIT_debug_frame): Define.
	(cfi_sections): New variable.
	(output_cie, output_fde, select_cie_for_fde): Add eh_frame
	argument, add supporting for outputting .debug_frame
	section.